--- a/src/web-worker/tsconfig.json
+++ b/src/web-worker/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "module": "commonjs",
     "target": "es5",
     "lib": ["webworker", "es5"],
