--- a/src/main-app/tsconfig.json
+++ b/src/main-app/tsconfig.json
@@ -3,6 +3,8 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
+    "noImplicitThis": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "commonjs",
     "target": "es5",
     "jsx": "react"
