--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "browserify": "14.1.0",
     "gulp": "3.9.1",
     "gulp-sourcemaps": "2.2.0",
-    "gulp-uglify": "2.0.0",
+    "gulp-uglify": "^3.0.2",
     "tsify": "3.0.1",
     "typescript": "2.5.2",
     "vinyl-buffer": "1.0.0",
