--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "react-slick": "0.14.5"
   },
   "devDependencies": {
-    "browserify": "14.1.0",
+    "browserify": "^16.5.0",
     "gulp": "3.9.1",
     "gulp-sourcemaps": "2.2.0",
     "gulp-uglify": "^3.0.2",
-    "tsify": "3.0.1",
+    "tsify": "^4.0.1",
     "typescript": "2.5.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
