--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "browserify": "^16.5.0",
     "gulp": "3.9.1",
-    "gulp-sourcemaps": "2.2.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "tsify": "^4.0.1",
     "typescript": "2.5.2",
