--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp-uglify": "^3.0.2",
     "tsify": "^4.0.1",
     "typescript": "2.5.2",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
