Update to React v16.12

--- a/src/main-app/tsconfig.json
+++ b/src/main-app/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
     "module": "commonjs",
+    "lib": ["DOM", "ES2015", "ScriptHost"],
     "target": "es5",
     "jsx": "react"
   },
