--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "dependencies": {
     "jquery": "1.12.4",
     "nouislider": "^14.1.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-slick": "0.14.8"
   },
   "devDependencies": {
     "@types/emscripten": "0.0.29",
     "@types/nouislider": "^9.0.6",
-    "@types/react": "16.1.0",
-    "@types/react-dom": "16.0.11",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-slick": "0.0.8",
     "browserify": "^16.5.0",
     "gulp": "^4.0.2",
