--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
   },
   "homepage": "https://github.com/timjb/svd-image-compression-demo",
   "dependencies": {
-    "jquery": "1.12.4",
     "nouislider": "^14.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-slick": "0.14.8"
+    "react-slick": "^0.25.2"
   },
   "devDependencies": {
     "@types/emscripten": "0.0.29",
     "@types/nouislider": "^9.0.6",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/react-slick": "0.0.8",
+    "@types/react-slick": "^0.23.4",
     "browserify": "^16.5.0",
     "gulp": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
