--- a/src/web-worker/tsconfig.json
+++ b/src/web-worker/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
+    "strict": true,
     "noFallthroughCasesInSwitch": true,
     "module": "commonjs",
     "target": "es5",
