Extend ESLint configuration and fix all ESLint errors and warnings
Fixes #8
Fixes #9

--- a/src/web-worker/tsconfig.json
+++ b/src/web-worker/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "target": "es5",
     "lib": ["webworker", "es5"],
-    "types": ["emscripten"]
+    "types": []
   },
   "files": [
     "./svd-worker.ts",
