--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "ts/app.tsx",
   "scripts": {
     "build": "gulp",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint:check": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +35,8 @@
     "@typescript-eslint/parser": "^2.20.0",
     "browserify": "^16.5.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "gulp": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
