Switch from gulp to webpack
Also switch to using ES6 import statements instead of CommonJS imports.

--- a/src/main-app/tsconfig.json
+++ b/src/main-app/tsconfig.json
@@ -1,26 +1,11 @@
 {
+  "extends": "../generic-tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "commonjs",
-    "lib": ["DOM", "ES2015", "ScriptHost"],
-    "target": "es5",
-    "jsx": "react"
+    "lib": ["DOM", "ES2015", "ScriptHost"]
   },
-  "files": [
-    "../shared/svd-worker-protocol.ts",
-    "../shared/types.ts",
-    "./App.tsx",
-    "./FileInputField.tsx",
-    "./Gallery.tsx",
-    "./HoverCanvasView.tsx",
-    "./image-svd.ts",
-    "./ImagePlaceholder.tsx",
-    "./index.tsx",
-    "./SingularValuesDiagram.tsx",
-    "./SingularValuesSlider.tsx",
-    "./SvdApproximation.tsx",
-    "./workerCommunication.ts"
+  "references": [
+    {
+      "path": "../shared"
+    }
   ]
 }
