--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demonstration of low rank matrix approximations via singular value decomposition",
   "main": "ts/app.tsx",
   "scripts": {
-    "build": "gulp",
+    "build": "webpack --config webpack.config.js --mode=production",
     "lint:check": "eslint . --ext .ts,.tsx --max-warnings 0",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\" \"*.js\"",
@@ -36,19 +36,17 @@
     "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "browserify": "^17.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gulp": "^4.0.2",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
     "prettier": "2.2.1",
-    "rimraf": "^3.0.2",
-    "tsify": "^5.0.2",
+    "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
+    "worker-loader": "^3.0.7"
   }
 }
