--- a/svd-image-compression-worker/Cargo.toml
+++ b/svd-image-compression-worker/Cargo.toml
@@ -11,17 +11,17 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.69"
-nalgebra = "0.23.2"
-js-sys = "0.3.46"
-web-sys = { version = "0.3.46", features = ["console"] }
-rand = { version = "0.7.3", features = ["small_rng"], default-features = false }
+wasm-bindgen = "0.2.79"
+nalgebra = { version = "0.30.1", features = ["rand-no-std"] }
+js-sys = "0.3.56"
+web-sys = { version = "0.3.56", features = ["console"] }
+rand = { version = "0.8.4", features = ["small_rng"], default-features = false }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
-console_error_panic_hook = { version = "0.1.6", optional = true }
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
@@ -31,7 +31,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.13"
+wasm-bindgen-test = "0.3.29"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
